Update to 1.19, drop Paper dependency
Working with Paper is a bit of a pain for our core plugin. May revisit once we/Paper are stable.